add collaborative filtering

--- a/Recommendation_Movie.ipynb
+++ b/Recommendation_Movie.ipynb
@@ -7,19 +7,27 @@
    "id": "7f5f3a58bc7b8b37"
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 1. Matrix Factorization, Content-based filtering",
+   "id": "98ff44def035f79"
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-05-18T04:38:46.317638Z",
-     "start_time": "2024-05-18T04:38:46.256822Z"
+     "end_time": "2024-05-18T05:14:44.444946Z",
+     "start_time": "2024-05-18T05:14:44.381486Z"
     }
    },
    "source": [
     "import re\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import linear_kernel\n",
     "\n",
@@ -104,12 +112,12 @@
        "</div>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 48
+   "execution_count": 19
   },
   {
    "metadata": {},
@@ -120,8 +128,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T04:38:46.394004Z",
-     "start_time": "2024-05-18T04:38:46.318645Z"
+     "end_time": "2024-05-18T05:14:44.523237Z",
+     "start_time": "2024-05-18T05:14:44.445952Z"
     }
    },
    "cell_type": "code",
@@ -210,18 +218,18 @@
        "</div>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 49
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T04:38:46.428409Z",
-     "start_time": "2024-05-18T04:38:46.395010Z"
+     "end_time": "2024-05-18T05:14:44.564762Z",
+     "start_time": "2024-05-18T05:14:44.524247Z"
     }
    },
    "cell_type": "code",
@@ -322,18 +330,18 @@
        "</div>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 50
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T04:38:47.383997Z",
-     "start_time": "2024-05-18T04:38:46.429414Z"
+     "end_time": "2024-05-18T05:14:45.535701Z",
+     "start_time": "2024-05-18T05:14:44.565770Z"
     }
    },
    "cell_type": "code",
@@ -350,18 +358,18 @@
        "(62423, 154860)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 51
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T04:38:47.392046Z",
-     "start_time": "2024-05-18T04:38:47.385002Z"
+     "end_time": "2024-05-18T05:14:45.543270Z",
+     "start_time": "2024-05-18T05:14:45.536706Z"
     }
    },
    "cell_type": "code",
@@ -379,18 +387,18 @@
        "(1, 154860)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 52
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T04:38:47.409700Z",
-     "start_time": "2024-05-18T04:38:47.393051Z"
+     "end_time": "2024-05-18T05:14:45.561850Z",
+     "start_time": "2024-05-18T05:14:45.544275Z"
     }
    },
    "cell_type": "code",
@@ -487,25 +495,171 @@
        "</div>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 53
+   "execution_count": 24
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 2. Collaborative filtering based on user ratings",
+   "id": "304c75b0e5e3dc47"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T04:38:47.412829Z",
-     "start_time": "2024-05-18T04:38:47.410706Z"
+     "end_time": "2024-05-18T05:14:51.712816Z",
+     "start_time": "2024-05-18T05:14:45.562856Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "ratings = pd.read_csv(\"data/ratings.csv\")\n",
+    "ratings.head()"
+   ],
    "id": "70f7dc69e704a53",
-   "outputs": [],
-   "execution_count": 53
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   userId  movieId  rating   timestamp\n",
+       "0       1      296     5.0  1147880044\n",
+       "1       1      306     3.5  1147868817\n",
+       "2       1      307     5.0  1147868828\n",
+       "3       1      665     5.0  1147878820\n",
+       "4       1      899     3.5  1147868510"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>296</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1147880044</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>306</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1147868817</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>307</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1147868828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>665</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1147878820</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>899</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1147868510</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 25
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-18T05:14:51.719584Z",
+     "start_time": "2024-05-18T05:14:51.713823Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "ratings.dtypes",
+   "id": "3c26a86b1285dc83",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "userId         int64\n",
+       "movieId        int64\n",
+       "rating       float64\n",
+       "timestamp      int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 26
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-18T05:14:51.825739Z",
+     "start_time": "2024-05-18T05:14:51.720588Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "movie_id = 1\n",
+    "similar_users = ratings[(ratings[\"movieId\"] == movie_id) & (ratings[\"rating\"] >= 4)][\"userId\"].unique()\n",
+    "similar_users"
+   ],
+   "id": "8574f76a4597c1af",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([     3,      5,      8, ..., 162530, 162533, 162534], dtype=int64)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 27
   }
  ],
  "metadata": {
