add collaborative filtering

--- a/Recommendation_Movie.ipynb
+++ b/Recommendation_Movie.ipynb
@@ -18,8 +18,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:14:44.444946Z",
-     "start_time": "2024-05-18T05:14:44.381486Z"
+     "end_time": "2024-05-18T09:17:04.074480Z",
+     "start_time": "2024-05-18T09:17:04.015410Z"
     }
    },
    "source": [
@@ -112,12 +112,12 @@
        "</div>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 19
+   "execution_count": 39
   },
   {
    "metadata": {},
@@ -128,8 +128,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:14:44.523237Z",
-     "start_time": "2024-05-18T05:14:44.445952Z"
+     "end_time": "2024-05-18T09:17:04.153520Z",
+     "start_time": "2024-05-18T09:17:04.075485Z"
     }
    },
    "cell_type": "code",
@@ -218,18 +218,18 @@
        "</div>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 20
+   "execution_count": 40
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:14:44.564762Z",
-     "start_time": "2024-05-18T05:14:44.524247Z"
+     "end_time": "2024-05-18T09:17:04.186828Z",
+     "start_time": "2024-05-18T09:17:04.154524Z"
     }
    },
    "cell_type": "code",
@@ -330,18 +330,18 @@
        "</div>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 21
+   "execution_count": 41
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:14:45.535701Z",
-     "start_time": "2024-05-18T05:14:44.565770Z"
+     "end_time": "2024-05-18T09:17:05.222245Z",
+     "start_time": "2024-05-18T09:17:04.187833Z"
     }
    },
    "cell_type": "code",
@@ -358,18 +358,18 @@
        "(62423, 154860)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 22
+   "execution_count": 42
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:14:45.543270Z",
-     "start_time": "2024-05-18T05:14:45.536706Z"
+     "end_time": "2024-05-18T09:17:05.230583Z",
+     "start_time": "2024-05-18T09:17:05.224256Z"
     }
    },
    "cell_type": "code",
@@ -387,18 +387,18 @@
        "(1, 154860)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 23
+   "execution_count": 43
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:14:45.561850Z",
-     "start_time": "2024-05-18T05:14:45.544275Z"
+     "end_time": "2024-05-18T09:17:05.249989Z",
+     "start_time": "2024-05-18T09:17:05.231596Z"
     }
    },
    "cell_type": "code",
@@ -495,12 +495,12 @@
        "</div>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 24
+   "execution_count": 44
   },
   {
    "metadata": {},
@@ -511,8 +511,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:14:51.712816Z",
-     "start_time": "2024-05-18T05:14:45.562856Z"
+     "end_time": "2024-05-18T09:17:11.118211Z",
+     "start_time": "2024-05-18T09:17:05.251001Z"
     }
    },
    "cell_type": "code",
@@ -598,18 +598,18 @@
        "</div>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 25
+   "execution_count": 45
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:14:51.719584Z",
-     "start_time": "2024-05-18T05:14:51.713823Z"
+     "end_time": "2024-05-18T09:17:11.124361Z",
+     "start_time": "2024-05-18T09:17:11.119232Z"
     }
    },
    "cell_type": "code",
@@ -626,18 +626,24 @@
        "dtype: object"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 26
+   "execution_count": 46
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Find users who have rates above 4 for the movie",
+   "id": "9967270df5b67e55"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T05:14:51.825739Z",
-     "start_time": "2024-05-18T05:14:51.720588Z"
+     "end_time": "2024-05-18T09:17:11.268608Z",
+     "start_time": "2024-05-18T09:17:11.125365Z"
     }
    },
    "cell_type": "code",
@@ -654,12 +660,417 @@
        "array([     3,      5,      8, ..., 162530, 162533, 162534], dtype=int64)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 27
+   "execution_count": 47
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Find other movies that similar users have rated above 4",
+   "id": "60648ea26eb32fa9"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-18T09:17:11.607292Z",
+     "start_time": "2024-05-18T09:17:11.269614Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "similar_users_rec = ratings[(ratings[\"userId\"].isin(similar_users)) & (ratings[\"rating\"] >= 4)]\n",
+    "similar_users_rec"
+   ],
+   "id": "528943c847f8cbb4",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "          userId  movieId  rating   timestamp\n",
+       "254            3        1     4.0  1439472215\n",
+       "255            3       29     4.5  1484754967\n",
+       "256            3       32     4.5  1439474635\n",
+       "257            3       50     5.0  1439474391\n",
+       "258            3      111     4.0  1484753849\n",
+       "...          ...      ...     ...         ...\n",
+       "24999332  162534   166643     4.0  1526891765\n",
+       "24999342  162534   171763     4.0  1526717390\n",
+       "24999348  162534   177593     5.0  1526666314\n",
+       "24999351  162534   177765     4.0  1526666311\n",
+       "24999378  162534   198609     4.0  1549870359\n",
+       "\n",
+       "[5101989 rows x 4 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>254</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1439472215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>255</th>\n",
+       "      <td>3</td>\n",
+       "      <td>29</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>1484754967</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>256</th>\n",
+       "      <td>3</td>\n",
+       "      <td>32</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>1439474635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>257</th>\n",
+       "      <td>3</td>\n",
+       "      <td>50</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1439474391</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>258</th>\n",
+       "      <td>3</td>\n",
+       "      <td>111</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1484753849</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24999332</th>\n",
+       "      <td>162534</td>\n",
+       "      <td>166643</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1526891765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24999342</th>\n",
+       "      <td>162534</td>\n",
+       "      <td>171763</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1526717390</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24999348</th>\n",
+       "      <td>162534</td>\n",
+       "      <td>177593</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1526666314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24999351</th>\n",
+       "      <td>162534</td>\n",
+       "      <td>177765</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1526666311</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24999378</th>\n",
+       "      <td>162534</td>\n",
+       "      <td>198609</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1549870359</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5101989 rows × 4 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 48
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Find the percentage of ratings for each movie that similar users have rated above 4",
+   "id": "4907b031851b1f6d"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-18T09:17:11.746176Z",
+     "start_time": "2024-05-18T09:17:11.609298Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "similar_users_rec = similar_users_rec[\"movieId\"].value_counts() / len(similar_users)\n",
+    "similar_users_rec = similar_users_rec[similar_users_rec > 0.2]\n",
+    "similar_users_rec"
+   ],
+   "id": "f52f8f2b3e6ba01d",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "movieId\n",
+       "1       1.000000\n",
+       "318     0.549604\n",
+       "260     0.531518\n",
+       "356     0.517224\n",
+       "296     0.495744\n",
+       "          ...   \n",
+       "1258    0.203055\n",
+       "4963    0.201835\n",
+       "4973    0.201835\n",
+       "592     0.200642\n",
+       "6874    0.200615\n",
+       "Name: count, Length: 79, dtype: float64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 49
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Find the average rating for each movie that all users have rated above 4",
+   "id": "8245bafe86266c73"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-18T09:27:31.472428Z",
+     "start_time": "2024-05-18T09:27:30.842333Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "all_users = ratings[(ratings[\"movieId\"].isin(similar_users_rec.index)) & (ratings[\"rating\"] >= 4)]\n",
+    "all_users_rec = all_users[\"movieId\"].value_counts() / len(all_users[\"userId\"].unique())\n",
+    "all_users_rec"
+   ],
+   "id": "842509fe3592b272",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "movieId\n",
+       "318      0.450106\n",
+       "296      0.398414\n",
+       "356      0.375811\n",
+       "593      0.370028\n",
+       "2571     0.355813\n",
+       "260      0.332559\n",
+       "527      0.310735\n",
+       "2959     0.299092\n",
+       "50       0.291381\n",
+       "1196     0.282431\n",
+       "858      0.277102\n",
+       "1198     0.265152\n",
+       "4993     0.265088\n",
+       "110      0.263282\n",
+       "2858     0.256918\n",
+       "589      0.250809\n",
+       "1210     0.248926\n",
+       "47       0.242888\n",
+       "1        0.240704\n",
+       "7153     0.240481\n",
+       "5952     0.240430\n",
+       "608      0.232017\n",
+       "480      0.224185\n",
+       "457      0.221906\n",
+       "2028     0.216550\n",
+       "1270     0.215376\n",
+       "2762     0.209905\n",
+       "58559    0.205635\n",
+       "4226     0.203324\n",
+       "32       0.201390\n",
+       "Name: count, dtype: float64"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 68
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-18T09:31:55.418258Z",
+     "start_time": "2024-05-18T09:31:55.407653Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "rec_percentage = pd.concat([similar_users_rec, all_users_rec], axis = 1)\n",
+    "rec_percentage.columns = [\"similar_users\", \"all_users\"]\n",
+    "rec_percentage = rec_percentage.fillna(0)\n",
+    "rec_percentage"
+   ],
+   "id": "70304859d63f58f2",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "         similar_users  all_users\n",
+       "movieId                          \n",
+       "1             1.000000   0.240704\n",
+       "318           0.549604   0.450106\n",
+       "260           0.531518   0.332559\n",
+       "356           0.517224   0.375811\n",
+       "296           0.495744   0.398414\n",
+       "...                ...        ...\n",
+       "1258          0.203055   0.000000\n",
+       "4963          0.201835   0.000000\n",
+       "4973          0.201835   0.000000\n",
+       "592           0.200642   0.000000\n",
+       "6874          0.200615   0.000000\n",
+       "\n",
+       "[79 rows x 2 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>similar_users</th>\n",
+       "      <th>all_users</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>movieId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.240704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>318</th>\n",
+       "      <td>0.549604</td>\n",
+       "      <td>0.450106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260</th>\n",
+       "      <td>0.531518</td>\n",
+       "      <td>0.332559</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356</th>\n",
+       "      <td>0.517224</td>\n",
+       "      <td>0.375811</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>296</th>\n",
+       "      <td>0.495744</td>\n",
+       "      <td>0.398414</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1258</th>\n",
+       "      <td>0.203055</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4963</th>\n",
+       "      <td>0.201835</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4973</th>\n",
+       "      <td>0.201835</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>592</th>\n",
+       "      <td>0.200642</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6874</th>\n",
+       "      <td>0.200615</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>79 rows × 2 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 69
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "dd8194fcb102471e"
   }
  ],
  "metadata": {
