--- a/Recommendation_Movie.ipynb
+++ b/Recommendation_Movie.ipynb
@@ -18,8 +18,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-05-18T14:32:48.360071Z",
-     "start_time": "2024-05-18T14:32:47.109318Z"
+     "end_time": "2024-05-18T15:03:30.001498Z",
+     "start_time": "2024-05-18T15:03:28.701818Z"
     }
    },
    "source": [
@@ -31,6 +31,7 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import linear_kernel\n",
     "\n",
+    "title = \"Toy Story\"\n",
     "movies = pd.read_csv('data/movies.csv')\n",
     "movies.head()"
    ],
@@ -128,8 +129,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T14:32:48.443384Z",
-     "start_time": "2024-05-18T14:32:48.362077Z"
+     "end_time": "2024-05-18T15:03:30.092441Z",
+     "start_time": "2024-05-18T15:03:30.002503Z"
     }
    },
    "cell_type": "code",
@@ -228,8 +229,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T14:32:48.477922Z",
-     "start_time": "2024-05-18T14:32:48.444398Z"
+     "end_time": "2024-05-18T15:03:30.127094Z",
+     "start_time": "2024-05-18T15:03:30.093446Z"
     }
    },
    "cell_type": "code",
@@ -340,8 +341,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T14:32:49.549325Z",
-     "start_time": "2024-05-18T14:32:48.478927Z"
+     "end_time": "2024-05-18T15:03:31.211102Z",
+     "start_time": "2024-05-18T15:03:30.128100Z"
     }
    },
    "cell_type": "code",
@@ -368,13 +369,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T14:32:49.557265Z",
-     "start_time": "2024-05-18T14:32:49.550331Z"
+     "end_time": "2024-05-18T15:03:31.220598Z",
+     "start_time": "2024-05-18T15:03:31.213107Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "title = \"Toy Story\"\n",
     "title = clean_title(title)\n",
     "query_vector = vectorizer.transform([title])\n",
     "query_vector.shape"
@@ -397,8 +397,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T14:32:49.579921Z",
-     "start_time": "2024-05-18T14:32:49.559270Z"
+     "end_time": "2024-05-18T15:03:31.242875Z",
+     "start_time": "2024-05-18T15:03:31.221604Z"
     }
    },
    "cell_type": "code",
@@ -518,8 +518,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T14:32:49.589544Z",
-     "start_time": "2024-05-18T14:32:49.580927Z"
+     "end_time": "2024-05-18T15:03:31.252780Z",
+     "start_time": "2024-05-18T15:03:31.243882Z"
     }
    },
    "cell_type": "code",
@@ -636,8 +636,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T14:32:55.485270Z",
-     "start_time": "2024-05-18T14:32:49.595764Z"
+     "end_time": "2024-05-18T15:03:37.249203Z",
+     "start_time": "2024-05-18T15:03:31.253789Z"
     }
    },
    "cell_type": "code",
@@ -723,18 +723,18 @@
        "</div>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T14:32:55.491998Z",
-     "start_time": "2024-05-18T14:32:55.486275Z"
+     "end_time": "2024-05-18T15:03:37.256385Z",
+     "start_time": "2024-05-18T15:03:37.250208Z"
     }
    },
    "cell_type": "code",
@@ -751,12 +751,12 @@
        "dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -767,8 +767,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T14:32:55.591709Z",
-     "start_time": "2024-05-18T14:32:55.494010Z"
+     "end_time": "2024-05-18T15:03:37.356605Z",
+     "start_time": "2024-05-18T15:03:37.257391Z"
     }
    },
    "cell_type": "code",
@@ -785,12 +785,12 @@
        "array([     3,      5,      8, ..., 162530, 162533, 162534], dtype=int64)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -801,8 +801,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T14:32:56.045901Z",
-     "start_time": "2024-05-18T14:32:55.592716Z"
+     "end_time": "2024-05-18T15:03:37.704896Z",
+     "start_time": "2024-05-18T15:03:37.357609Z"
     }
    },
    "cell_type": "code",
@@ -939,12 +939,12 @@
        "</div>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -955,8 +955,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T14:32:56.191960Z",
-     "start_time": "2024-05-18T14:32:56.046909Z"
+     "end_time": "2024-05-18T15:03:37.847262Z",
+     "start_time": "2024-05-18T15:03:37.705901Z"
     }
    },
    "cell_type": "code",
@@ -985,12 +985,12 @@
        "Name: count, Length: 79, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -1001,8 +1001,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T14:32:56.901472Z",
-     "start_time": "2024-05-18T14:32:56.192969Z"
+     "end_time": "2024-05-18T15:03:38.509054Z",
+     "start_time": "2024-05-18T15:03:37.848267Z"
     }
    },
    "cell_type": "code",
@@ -1031,18 +1031,18 @@
        "Name: count, Length: 79, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T14:32:56.913974Z",
-     "start_time": "2024-05-18T14:32:56.902478Z"
+     "end_time": "2024-05-18T15:03:38.521340Z",
+     "start_time": "2024-05-18T15:03:38.511061Z"
     }
    },
    "cell_type": "code",
@@ -1163,24 +1163,24 @@
        "</div>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 15
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T14:32:56.925666Z",
-     "start_time": "2024-05-18T14:32:56.914982Z"
+     "end_time": "2024-05-18T15:03:38.533462Z",
+     "start_time": "2024-05-18T15:03:38.522346Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "rec_percentage[\"score\"] = (rec_percentage[\"similar_users\"] / rec_percentage[\"all_users\"]) / 10\n",
-    "rec = rec_percentage.sort_values(\"score\", ascending = False)\n",
+    "rec_percentage[\"suggest\"] = (rec_percentage[\"similar_users\"] / rec_percentage[\"all_users\"]) / 10\n",
+    "rec = rec_percentage.sort_values(\"suggest\", ascending = False)\n",
     "rec"
    ],
    "id": "dd8194fcb102471e",
@@ -1188,7 +1188,7 @@
     {
      "data": {
       "text/plain": [
-       "         similar_users  all_users     score\n",
+       "         similar_users  all_users   suggest\n",
        "movieId                                    \n",
        "1             1.000000   0.240704  0.415447\n",
        "3114          0.328914   0.104538  0.314636\n",
@@ -1225,7 +1225,7 @@
        "      <th></th>\n",
        "      <th>similar_users</th>\n",
        "      <th>all_users</th>\n",
-       "      <th>score</th>\n",
+       "      <th>suggest</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>movieId</th>\n",
@@ -1307,18 +1307,18 @@
        "</div>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 16
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T14:32:56.944869Z",
-     "start_time": "2024-05-18T14:32:56.926673Z"
+     "end_time": "2024-05-18T15:03:38.553030Z",
+     "start_time": "2024-05-18T15:03:38.534469Z"
     }
    },
    "cell_type": "code",
@@ -1331,7 +1331,7 @@
     {
      "data": {
       "text/plain": [
-       "       similar_users  all_users     score  movieId  \\\n",
+       "       similar_users  all_users   suggest  movieId  \\\n",
        "0           1.000000   0.240704  0.415447        1   \n",
        "3021        0.328914   0.104538  0.314636     3114   \n",
        "1047        0.231801   0.101340  0.228737     1073   \n",
@@ -1406,7 +1406,7 @@
        "      <th></th>\n",
        "      <th>similar_users</th>\n",
        "      <th>all_users</th>\n",
-       "      <th>score</th>\n",
+       "      <th>suggest</th>\n",
        "      <th>movieId</th>\n",
        "      <th>title</th>\n",
        "      <th>genres</th>\n",
@@ -1530,12 +1530,12 @@
        "</div>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 17
+   "execution_count": 16
   },
   {
    "metadata": {},
@@ -1546,8 +1546,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T14:32:57.009219Z",
-     "start_time": "2024-05-18T14:32:56.946879Z"
+     "end_time": "2024-05-18T15:03:38.609047Z",
+     "start_time": "2024-05-18T15:03:38.554040Z"
     }
    },
    "cell_type": "code",
@@ -1555,7 +1555,7 @@
     "merged_df = pd.merge(similarity_df, rec, on=\"title\", how=\"left\")\n",
     "merged_df.drop(columns=[\"movieId\", \"genres\", \"combine\", \"similar_users\", \"all_users\"], inplace=True)\n",
     "merged_df = merged_df.fillna(0)\n",
-    "merged_df[\"total_score\"] = (merged_df[\"similarity\"] + merged_df[\"score\"] * 2) / 3\n",
+    "merged_df[\"total_score\"] = (merged_df[\"similarity\"] + merged_df[\"suggest\"] * 2) / 3\n",
     "merged_df = merged_df.sort_values (\"total_score\", ascending = False)\n",
     "merged_df = merged_df.drop_duplicates(subset = \"title\")\n",
     "merged_df"
@@ -1565,7 +1565,7 @@
     {
      "data": {
       "text/plain": [
-       "                                   title  similarity     score  total_score\n",
+       "                                   title  similarity   suggest  total_score\n",
        "1                              Toy Story    0.652562  0.415447     0.494486\n",
        "2                            Toy Story 2    0.652562  0.314636     0.427278\n",
        "0                            Toy Story 4    0.687338  0.000000     0.229113\n",
@@ -1601,7 +1601,7 @@
        "      <th></th>\n",
        "      <th>title</th>\n",
        "      <th>similarity</th>\n",
-       "      <th>score</th>\n",
+       "      <th>suggest</th>\n",
        "      <th>total_score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1689,12 +1689,12 @@
        "</div>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 18
+   "execution_count": 17
   }
  ],
  "metadata": {
