--- a/Recommendation_Movie.ipynb
+++ b/Recommendation_Movie.ipynb
@@ -9,7 +9,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## 1. Matrix Factorization, Content-based filtering",
+   "source": "## 1. Matrix Factorization, Tf-idf, Cosine Similarity",
    "id": "98ff44def035f79"
   },
   {
@@ -18,8 +18,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-05-18T15:03:30.001498Z",
-     "start_time": "2024-05-18T15:03:28.701818Z"
+     "end_time": "2024-05-19T11:48:35.888673Z",
+     "start_time": "2024-05-19T11:48:32.177757Z"
     }
    },
    "source": [
@@ -31,6 +31,8 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import linear_kernel\n",
     "\n",
+    "# Type the movie title you want to search in here\n",
+    "# The title should be exactly the same as the title in the dataset so that they can recommend other movie for you\n",
     "title = \"Toy Story\"\n",
     "movies = pd.read_csv('data/movies.csv')\n",
     "movies.head()"
@@ -129,8 +131,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T15:03:30.092441Z",
-     "start_time": "2024-05-18T15:03:30.002503Z"
+     "end_time": "2024-05-19T11:48:35.992788Z",
+     "start_time": "2024-05-19T11:48:35.889678Z"
     }
    },
    "cell_type": "code",
@@ -229,8 +231,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T15:03:30.127094Z",
-     "start_time": "2024-05-18T15:03:30.093446Z"
+     "end_time": "2024-05-19T11:48:36.036184Z",
+     "start_time": "2024-05-19T11:48:35.993795Z"
     }
    },
    "cell_type": "code",
@@ -341,8 +343,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T15:03:31.211102Z",
-     "start_time": "2024-05-18T15:03:30.128100Z"
+     "end_time": "2024-05-19T11:48:37.399914Z",
+     "start_time": "2024-05-19T11:48:36.037190Z"
     }
    },
    "cell_type": "code",
@@ -369,8 +371,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T15:03:31.220598Z",
-     "start_time": "2024-05-18T15:03:31.213107Z"
+     "end_time": "2024-05-19T11:48:37.408478Z",
+     "start_time": "2024-05-19T11:48:37.401921Z"
     }
    },
    "cell_type": "code",
@@ -397,8 +399,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T15:03:31.242875Z",
-     "start_time": "2024-05-18T15:03:31.221604Z"
+     "end_time": "2024-05-19T11:48:37.433272Z",
+     "start_time": "2024-05-19T11:48:37.409485Z"
     }
    },
    "cell_type": "code",
@@ -518,8 +520,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T15:03:31.252780Z",
-     "start_time": "2024-05-18T15:03:31.243882Z"
+     "end_time": "2024-05-19T11:48:37.443670Z",
+     "start_time": "2024-05-19T11:48:37.434278Z"
     }
    },
    "cell_type": "code",
@@ -630,14 +632,14 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## 2. Collaborative filtering based on user ratings",
+   "source": "## 2. Collaborative filtering, Content-based filtering based on user ratings",
    "id": "304c75b0e5e3dc47"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T15:03:37.249203Z",
-     "start_time": "2024-05-18T15:03:31.253789Z"
+     "end_time": "2024-05-19T11:48:44.342047Z",
+     "start_time": "2024-05-19T11:48:37.444681Z"
     }
    },
    "cell_type": "code",
@@ -733,8 +735,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T15:03:37.256385Z",
-     "start_time": "2024-05-18T15:03:37.250208Z"
+     "end_time": "2024-05-19T11:48:44.348205Z",
+     "start_time": "2024-05-19T11:48:44.343053Z"
     }
    },
    "cell_type": "code",
@@ -767,8 +769,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T15:03:37.356605Z",
-     "start_time": "2024-05-18T15:03:37.257391Z"
+     "end_time": "2024-05-19T11:48:44.456024Z",
+     "start_time": "2024-05-19T11:48:44.349210Z"
     }
    },
    "cell_type": "code",
@@ -801,8 +803,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T15:03:37.704896Z",
-     "start_time": "2024-05-18T15:03:37.357609Z"
+     "end_time": "2024-05-19T11:48:44.953349Z",
+     "start_time": "2024-05-19T11:48:44.457030Z"
     }
    },
    "cell_type": "code",
@@ -955,8 +957,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T15:03:37.847262Z",
-     "start_time": "2024-05-18T15:03:37.705901Z"
+     "end_time": "2024-05-19T11:48:45.131537Z",
+     "start_time": "2024-05-19T11:48:44.954358Z"
     }
    },
    "cell_type": "code",
@@ -1001,8 +1003,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T15:03:38.509054Z",
-     "start_time": "2024-05-18T15:03:37.848267Z"
+     "end_time": "2024-05-19T11:48:45.831203Z",
+     "start_time": "2024-05-19T11:48:45.133544Z"
     }
    },
    "cell_type": "code",
@@ -1041,8 +1043,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T15:03:38.521340Z",
-     "start_time": "2024-05-18T15:03:38.511061Z"
+     "end_time": "2024-05-19T11:48:45.846357Z",
+     "start_time": "2024-05-19T11:48:45.835211Z"
     }
    },
    "cell_type": "code",
@@ -1173,8 +1175,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T15:03:38.533462Z",
-     "start_time": "2024-05-18T15:03:38.522346Z"
+     "end_time": "2024-05-19T11:48:45.861184Z",
+     "start_time": "2024-05-19T11:48:45.848365Z"
     }
    },
    "cell_type": "code",
@@ -1317,8 +1319,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T15:03:38.553030Z",
-     "start_time": "2024-05-18T15:03:38.534469Z"
+     "end_time": "2024-05-19T11:48:45.884621Z",
+     "start_time": "2024-05-19T11:48:45.862193Z"
     }
    },
    "cell_type": "code",
@@ -1546,8 +1548,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T15:03:38.609047Z",
-     "start_time": "2024-05-18T15:03:38.554040Z"
+     "end_time": "2024-05-19T11:48:45.957451Z",
+     "start_time": "2024-05-19T11:48:45.885628Z"
     }
    },
    "cell_type": "code",
